--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -150,3 +150,118 @@ ol {
 input.w-button {
   -webkit-appearance: button;
 }
+
+/* Custom FS from webflow */
+.widewrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1346px;
+  padding-top: 40px;
+  padding-right: 33px;
+  padding-left: 33px;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.heading {
+  margin-bottom: 34px;
+  color: #14315d;
+  font-size: 50px;
+  line-height: 55px;
+  font-weight: 800;
+  letter-spacing: -1px;
+  text-transform: uppercase;
+}
+
+.heading.centered {
+  text-align: center;
+}
+
+
+.text-span-2 {
+  color: #f74d7b;
+}
+
+.subheader {
+  color: #4f6586;
+  font-family: "Proxima Nova", sans-serif;
+  font-size: 35px;
+  line-height: 40px;
+}
+
+.subheader.centered {
+  text-align: center;
+}
+
+.herotext {
+  width: 47.6%;
+  margin-right: 60px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+}
+
+.herotext.cenetered {
+  width: 100%;
+  max-width: 894px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 33px;
+  padding-left: 33px;
+}
+
+.text-span-4 {
+  color: #26abe8;
+}
+
+@media screen and (max-width: 479px) {
+  .widewrapper {
+    padding-top: 0px;
+  }
+
+  .heading {
+    margin-bottom: 10px;
+    font-size: 35px;
+    line-height: 40px;
+  }
+
+  .heading.centered {
+    font-size: 30px;
+    line-height: 35px;
+    text-align: left;
+    letter-spacing: -0.3px;
+    text-transform: uppercase;
+  }
+
+  .subheader {
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 700;
+  }
+
+  .subheader.centered {
+    text-align: left;
+  }
+
+  .herotext {
+    font-size: 1px;
+  }
+
+  .herotext.cenetered {
+    padding-top: 60px;
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+
+  .button.cta {
+    font-size: 20px;
+  }
+}
