Styles blog list + some darke theme

--- a/src/components/_variables.css
+++ b/src/components/_variables.css
@@ -19,7 +19,7 @@
   /* Light Mode */
   --body-bg: #fff;
   --body-color: #444;
-  --body-color-faded: #888;
+  --body-color-faded: #4f6586;
   --logo-wordmark-color: var(--color-dark-blue);
 
   --rgba-light-blue: 38, 171, 232;
