--- a/src/components/posts-list/posts-list.css
+++ b/src/components/posts-list/posts-list.css
@@ -1,5 +1,73 @@
 @import '../variables';
 
+.entries-list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+}
+
+.colorborderwrapping {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 2px;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  border-radius: 18px;
+  background-image: -webkit-gradient(linear, left top, right top, from(#f74d7b), to(#26abe8));
+  background-image: linear-gradient(90deg, #f74d7b, #26abe8);
+}
+
+.colorborderwrapping.entrypreview {
+  max-width: 46%;
+  margin-bottom: 60px;
+  &:nth-child(odd) {
+    margin-right: auto;
+  }
+  &:nth-child(even) {
+    margin-left: auto;
+  }
+}
+
+.entry-preview {
+  padding: 40px 60px 60px;
+  border-radius: 16px;
+  background-color: var(--body-bg);
+}
+
+
+@media screen and (max-width: 479px) {
+  .colorborderwrapping.entrypreview {
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+  .entry-preview {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+}
+
 .posts-list {
 
   &:not(:last-child) {
@@ -38,19 +106,30 @@
   color: var(--color-dark-blue-darkable);
   font-family: var(--font-sans-serif);
   font-size: var(--size-large);
-  margin-bottom: var(--space-half);
-  font-weight: normal;
+  margin-bottom: var(--space-single);
+  margin-top: 30px;
+  font-weight: bold;
+  line-height: 35px;
+  letter-spacing: 0;
   > a {
     color: var(--color-dark-blue-darkable);
+    text-decoration: none;
   }
 }
 
 .posts-list-meta {
   color: var(--body-color-faded);
-  font-family: var(--font-serif);
-  font-size: var(--size-small);
+  font-family: var(--font-sans-serif);
+  font-size: var(--size-medium);
   line-height: 1.5;
-  margin: 0 0 var(--space-single);
+  margin: 0 0 var(--space-double);
+  text-transform: uppercase;
+  font-weight: bold;
+  a {
+    text-decoration: none;
+    border-bottom: 1px dotted var(--body-color-faded);
+    margin-right: 5px;
+  }
 }
 
 .posts-list-authors a {
@@ -83,9 +162,11 @@
 .post-link {
   color: var(--color-dark-blue-darkable);
   font-family: var(--font-sans-serif);
-  font-weight: bold;
+  font-weight: 800;
+  font-size: 20px;
+  text-decoration: none;
 }
 
 .post-link--arrow {
-  color: var(--color-pink);
+  color: var(--color-dark-blue-darkable);
 }
