--- a/src/templates/blog-list.css
+++ b/src/templates/blog-list.css
@@ -1,10 +1,15 @@
-@media screen and (max-width: 991px) {
-  .widewrapper.herowrapper {
-    margin-top: 40px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
+.gradient-text {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#f74d7b),
+    color-stop(95%, #26abe8)
+  );
+  background-image: linear-gradient(90deg, #f74d7b, #26abe8 95%);
+  text-align: center;
+  text-transform: uppercase;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
