Replaces nav logo for svg in webflow pages

--- a/static/css/frontside-website.webflow.css
+++ b/static/css/frontside-website.webflow.css
@@ -1472,6 +1472,11 @@
   margin-bottom: 20px;
 }
 
+.image-12 {
+  width: 137px;
+  height: 34px;
+}
+
 @media screen and (max-width: 991px) {
   .widewrapper {
     -webkit-box-orient: horizontal;
