--- a/src/components/_variables.css
+++ b/src/components/_variables.css
@@ -21,6 +21,7 @@
   --body-color: #444;
   --body-color-faded: #4f6586;
   --logo-wordmark-color: var(--color-dark-blue);
+  --nav-overlay-shadow: rgba(217, 241, 255, 0.5);
 
   --rgba-light-blue: 38, 171, 232;
 
@@ -112,5 +113,6 @@
     --logo-wordmark-color: #fff;
     --color-dark-blue-darkable: #ffffff;
     --input-color: #ffffff;
+    --nav-overlay-shadow: rgba(0, 0, 0, 0.6);
   }
 }
