--- a/static/css/frontside-website.webflow.css
+++ b/static/css/frontside-website.webflow.css
@@ -243,6 +243,12 @@
   background-image: linear-gradient(90deg, #6296cb, #937aaf 40%, #897eaf 60%, #ba6892);
 }
 
+.button.primary {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #14315d;
+}
+
 .cta-intro {
   margin-bottom: 25px;
   padding-right: 0px;
