--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -1,10 +1,22 @@
-.input {
-  border: 1px solid var(--input-border-color);
-  border-radius: var(--space-half);
+.fs-text-field--input {
+  font-family: var(--font-sans-serif);
+  padding: 5px 15px;
+  font-size: var(--size-med-sm);
   background: var(--body-bg);
-  padding: 0.25em 0.5em;
-  width: 100%;
-  color: var(--input-color);
-  font-size: 1rem;
-  font-family: var(--font-serif);
+  border-radius: 20px;
+  outline: none;
+  color: var(--body-color-faded);
+  border: 2px solid var(--input-border-color);
+}
+
+.fs-text-field--input__highlight {
+  border: none;
+}
+
+.input-boder__highlight {
+  background-image: -webkit-gradient(linear, left top, right top, from(#26abe8), to(#f74d7b));
+  background-image: linear-gradient(90deg, #26abe8, #f74d7b);
+  padding: 2px;
+  border-radius: 20px;
+  display: inline-block;
 }
